--- a/css demos/home.html
+++ b/css demos/home.html
@@ -15,7 +15,7 @@
         }
     </style> -->
 
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="css/home.css" />
 </head>
 
 <body>
@@ -33,9 +33,9 @@
     <a href="http://www.google.com" class="specialText">GOOGLE</a>
     <br />
     <button id="btn">Click Me!!</button>
-    <br/>
-    <br/>
-    <a href="http://www.google.com" name="google">GOOGLE</a> | 
+    <br />
+    <br />
+    <a href="http://www.google.com" name="google">GOOGLE</a> |
     <a href="http://www.facebook.com">FACEBOOK</a> |
     <a href="http://www.flipkart.com">FLIPKART</a>
     <br><br><br>
