--- a/javascript demos/functions.html
+++ b/javascript demos/functions.html
@@ -8,7 +8,8 @@
 <body>
     <h2>Functions in Javascript</h2>
 
-    <script src="js/functiondeclarations.js"></script>
+    <script src="js/closurefunction.js"></script>
+    <!-- <script src="js/functiondeclarations.js"></script> -->
     <!-- <script src="js/functions.js"></script> -->
 </body>
 </html>
