event, mouse events in javascript

--- a/javascript demos/dates.html
+++ b/javascript demos/dates.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>Date in Javascript</h2>
+
+    <div>
+        Select date:
+        <input type="date" />
+    </div>
+
     <script src="js/dates.js"></script>
 </body>
+
 </html>
