--- a/jquery demos/addfunctions.html
+++ b/jquery demos/addfunctions.html
@@ -35,7 +35,7 @@
                 // $('#div1').after('After Text');
                 // $('#div1').before('Before Text');
 
-                $('#div1').append('<a href="#">show more..</a>');
+                $('#div1').append('&nbsp;&nbsp;&nbsp;<a href="#">show more..</a>');
                 $('#div1').prepend('<h3>Page Title</h3>');
                 $('#div1').after('<input type="button" value="Stop"/>');
                 $('#div1').before('<input type="button" value="Start"/>');
