--- a/bootstrap demos/typography.html
+++ b/bootstrap demos/typography.html
@@ -36,6 +36,9 @@
             <dd>Ajay</dd>
             <dd>Ganesh</dd>
         </dl>
+        <p class="text-uppercase">This is a paragraph text</p>
+        <p class="text-lowercase">This is a paragraph text</p>
+        <p class="text-capitalize">This is a paragraph text</p>
     </div>
 </body>
 
