--- a/bootstrap demos/tables.html
+++ b/bootstrap demos/tables.html
@@ -27,12 +27,12 @@
                 <tr>
                     <td>1</td>
                     <td>Vishal</td>
-                    <td>Mumbai</td>
+                    <td rowspan="2">Mumbai</td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Ritesh</td>
-                    <td>Mumbai</td>
+                    <!-- <td>Mumbai</td> -->
                 </tr>
                 <tr>
                     <td>3</td>
