--- a/bootstrap demos/buttons.html
+++ b/bootstrap demos/buttons.html
@@ -17,7 +17,7 @@
         <h2>Buttons Demo</h2>
         <button type="button" class="btn btn-outline-primary btn-block">Primary</button>
         <button type="button" class="btn">Basic</button>
-        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary" style="background-color: blue;">Primary</button>
         <button type="button" class="btn btn-secondary">Secondary</button>
         <button type="button" class="btn btn-success">Success</button>
         <button type="button" class="btn btn-info">Info</button>
